--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,7 @@
                       <div class="mb-2">
                         <li
                           @click="$store.clients.setSelected(client); callSuccess(`Client selected - ${client.name}`)"
-                          class="p-1 text-left rounded-md cursor-pointer dark:bg-vdp2 text-vds hover:text-vls2 dark:text-vds3light dark:hover:bg-vdp3 dark:hover:text-vds"
+                          class="p-1 text-left rounded-md cursor-pointer dark:bg-vdp2 text-vls2/60 hover:text-vls2 dark:text-vds3light dark:hover:bg-vdp3 dark:hover:text-vds"
                           x-text="client.name"></li>
                       </div>
                     </template>
